--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Adding config.py file.
+config.py
+
+# Adding addtional files
+
+API_practice.ipynb
+citipy_import_test.ipynb
+random_numbers.ipynb
+Traversing_JSON.ipynb
+try-except.ipynb
+WeatherPy_old.ipynb
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
